# quality-intelligence-tool-v1

./: .gitignore  README.md  main.py  pyproject.toml
core/: ollama_client.py  report_builder.py
core/agents/instructions/: test_run.md
core/analyzers/: ai_analyzer.py  metrics.py  quality_gates.py  test_run_analyzer.py
core/graph/: graph.py  state.py
core/graph/nodes/: __init__.py  node_ai_analyzer.py  node_csv_parser.py  node_csv_parsers.py  node_metrics.py  node_output.py  node_quality_gates.py  node_sync.py  node_xml_parser.py
core/parsers/: csv_parser.py  xml_parser.py
data/: bugs.csv  test_run.xml
demo_suite/: conftest.py
demo_suite/src/: orders.py  products.py  users.py
demo_suite/tests/: test_orders.py  test_products.py  test_users.py
templates/: report.html
