[project]
name = "ai-test-reviewer"
version = "0.1.0"
description = "Portfolio project QA intelligence with AI implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["demo_suite/tests"]
pythonpath = ["demo_suite"]
